[gd_scene load_steps=4 format=2]

[ext_resource path="res://Objects/Traps/Slime/Slime.png" type="Texture" id=1]
[ext_resource path="res://Objects/Traps/Slime/Slime.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Slime" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Slime_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Slime_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
